# delvn

./: .env.example  .gitignore  LOGO.md  README.md  README_OUTLINE.md  TEST.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
demo/: config.yaml  recording_checklist.md  run_demo.py  submission_checklist.md  voiceover.md
docs/: architecture.md  example_brief.md
infra/: foundry_config.yaml
scripts/: smoke_azure_storage.py
src/agents/: correlator_agent.py  cve_agent.py  intel_agent.py  news_agent.py  prioritizer_agent.py  reporter_agent.py
src/common/: __init__.py  http.py
src/config/: settings.py  user_stack.py  user_stack.yaml
src/correlation/: __init__.py  matcher.py  scoring.py
src/embeddings/: __init__.py  client.py
src/integrations/: nvd.py  otx.py  rss.py
src/models/: __init__.py  brief.py  correlation.py  threat.py  unified_threat.py
src/normalization/: __init__.py  normalize.py
src/prioritization/: __init__.py  scoring.py
src/reporting/: __init__.py  render.py
src/storage/: __init__.py  cosmos.py  search.py
tests/: test_brief_render.py  test_correlation_scoring.py  test_correlator_smoke.py  test_embeddings_smoke.py  test_normalization.py  test_nvd_parsing.py  test_otx_normalization.py  test_prioritization_scoring.py  test_rss_normalization.py  test_settings_smoke.py  test_storage_clients_smoke.py  test_threat_model.py  test_user_stack.py
(+28 files in other folders)
